fix: remove horizontal scroll

--- a/index.scss
+++ b/index.scss
@@ -70,6 +70,8 @@ $typography-accent-font: 'Tinos';
 }
 
 body {
+  max-width: 100%;
+  overflow-x: hidden;
   color: red;
   margin: 0px;
 }
